# hrs-py

./: .gitignore  README.md  pyproject.toml  tox.ini
src/hrs_py/: __main__.py  lib.py  main.py  types.py
tests/: test_lib.py  test_main.py
tests/data/: hours.txt
