[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hrs-py"
version = "0.1.0"
description = ""
authors = ["Isto Nikula <isto.nikula@iki.fi>"]
readme = "README.md"
packages = [{ include = "hrs_py", from = "src" }]

[tool.poetry.scripts]
hrs-py = "hrs_py.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
tox = "^4.12.1"
mypy = "^1.8.0"

[tool.mypy]
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src"]
